[gd_scene load_steps=6 format=3 uid="uid://cfs5mpthsujif"]

[ext_resource type="Script" path="res://scripts/sign/sign.gd" id="1_cvf67"]
[ext_resource type="Texture2D" uid="uid://dltrv5pl5rq22" path="res://assets/images/scenes/map.png" id="2_0v6ai"]
[ext_resource type="Texture2D" uid="uid://cee5bdx84tok6" path="res://assets/images/UI/Pause_Screen_Placeholder.png" id="3_u2wqs"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sbo05"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aegfy"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.854902, 0.67451, 0.898039, 1)
border_blend = true

[node name="Sign" type="Control" node_paths=PackedStringArray("buttons")]
layout_direction = 1
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_cvf67")
buttons = [NodePath("Town_center"), NodePath("Pearly_gates"), NodePath("Behind_tower")]

[node name="Map" type="Sprite2D" parent="."]
visible = false
position = Vector2(827, 352)
texture = ExtResource("2_0v6ai")

[node name="Town_center" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 619.0
offset_top = 402.0
offset_right = 726.0
offset_bottom = 433.0
disabled = true
text = "Town Center"

[node name="Pearly_gates" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 737.0
offset_top = 336.0
offset_right = 842.0
offset_bottom = 367.0
disabled = true
text = "Pearly Gates
"

[node name="Behind_tower" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 875.0
offset_top = 377.0
offset_right = 1059.0
offset_bottom = 408.0
disabled = true
text = "Behind the Clocktower"

[node name="PauseScreenPlaceholder" type="Sprite2D" parent="."]
position = Vector2(960, 540)
scale = Vector2(1, 1)
texture = ExtResource("3_u2wqs")

[node name="greg_talk" type="Button" parent="."]
layout_mode = 0
offset_left = 267.0
offset_top = 213.0
offset_right = 365.0
offset_bottom = 251.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_sbo05")
theme_override_styles/hover = SubResource("StyleBoxFlat_aegfy")

[node name="sef_talk" type="Button" parent="."]
layout_mode = 0
offset_left = 268.0
offset_top = 421.0
offset_right = 366.0
offset_bottom = 459.0
theme_override_colors/icon_normal_color = Color(1, 1, 1, 0)
theme_override_styles/normal = SubResource("StyleBoxEmpty_sbo05")
theme_override_styles/hover = SubResource("StyleBoxFlat_aegfy")

[node name="eus_talk" type="Button" parent="."]
layout_mode = 0
offset_left = 266.0
offset_top = 650.0
offset_right = 364.0
offset_bottom = 688.0
theme_override_colors/icon_normal_color = Color(1, 1, 1, 0)
theme_override_styles/normal = SubResource("StyleBoxEmpty_sbo05")
theme_override_styles/hover = SubResource("StyleBoxFlat_aegfy")
